--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>?????</title>
+		<title>Keyword Spotting</title>
 	</head>
 
 	<body>
 		<input type="text" id="input"></input>
-		<button>send</button>
+		<button>search</button>
 
 		<script src="jquery-1.10.1.min.js"></script>
 		<script>
