--- a/public/index.html
+++ b/public/index.html
@@ -4,35 +4,42 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		
 		<title>Keyword Spotting</title>
+		
+		<link type="text/css" href="css/index.css" rel="stylesheet">		
 	</head>
 
-	<body>
-		<input type="text" id="input"></input>
-		<button>search</button>
+	<body class="webdesigntuts-workshop">
+		<div>
+			<form action="index.html">		
+				<input type="text" id="input" placeholder="Search..." autofocus>		    	
+				<button>Search</button>
+			</form>
+		</div>
+		<h1 id="title">Keyword Spotting</h1>
 
 		<script src="jquery-1.10.1.min.js"></script>
 		<script>
 		$(document).ready(function(){
 		  $("button").click(function(){
-		 // alert(document.getElementById('input').value)
-		var query = new  FormData();
-		query.append('seq', document.getElementById('input').value);
-			$.ajax({
-					type: 'POST',
-					url: '/public',
-					data: query,
-					processData: false,
-					contentType: false,
-					success: function (res) {
-					   alert(res.data);
-					},
-					error: function () {
-						console.log(arguments);
-					}
+			var query = new  FormData();
+			alert(document.getElementById('input').value);
+			query.append('seq', document.getElementById('input').value);
+				$.ajax({
+						type: 'POST',
+						url: '/public',
+						data: query,
+						processData: false,
+						contentType: false,
+						success: function (res) {
+						   alert(res.data);
+						},
+						error: function () {
+							console.log(arguments);
+						}
+					});
 				});
-			});
 			});
 		</script>
 	</body>
