--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 	</head>
 
 	<body class="webdesigntuts-workshop">
-		<h1 id="title">Keyword Spotting</h1>
+		<!-- h1 id="title">Keyword Spotting</h1 -->
+		<img id="slogan" height="180px" src="img/KWS.png">
 		<div id="form">
 			<input type="text" id="input" placeholder="Search..." onkeypress="if(event.keyCode == 13){$('button').click()}" autofocus>		    	
 			<button>Search</button>
