--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 	<body class="webdesigntuts-workshop">
 		<!-- h1 id="title">Keyword Spotting</h1 -->
-		<img id="slogan" height="180px" src="img/KWS.png">
+		<div id="slogan"><img height="180px" src="img/KWS.png"></div>
 		<div id="form">
 			<input type="text" id="input" placeholder="Search..." onkeypress="if(event.keyCode == 13){$('button').click()}" autofocus>		    	
 			<button>Search</button>
