update audio play

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,14 @@
 		<!-- h1 id="title">Keyword Spotting</h1 -->
 		<div id="slogan"><img height="180px" src="img/KWS.png"></div>
 		<div id="form">
-			<input type="text" id="input" placeholder="Search..." onkeypress="if(event.keyCode == 13){$('button').click()}" autofocus>		    	
+			<input type="text" id="input" placeholder="" onkeypress="if(event.keyCode == 13){$('button').click()}" autofocus>		    	
 			<button>Search</button>
 		</div>
 		<div id="result" class="container"></div>
 
 		<script src="js/jquery-1.10.1.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
+		<script src="js/buzz.min.js"></script>
 		<script src="js/index.js"></script>
 	</body>
 </html>
