--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,17 @@
 
 	<body class="webdesigntuts-workshop">
 		<!-- h1 id="title">Keyword Spotting</h1 -->
-		<div id="slogan"><img height="180px" src="img/KWS.png"></div>
+		<!-- div id="slogan"><img height="180px" src="img/KWS.png"></div>
 		<div id="form">
 			<input type="text" id="input" placeholder="" onkeypress="if(event.keyCode == 13){$('button').click()}" autofocus>		    	
 			<button>Search</button>
-		</div>
-		<div id="result" class="container"></div>
+		</div -->
 		
-		<div id="load" class="col-lg-12">
-					<img src="img/watson.gif"></img>
-				</div>
+		<div id="result" class="container" style="margin-top:50px"><h1>result</h1></div>
+		
+		<div id="load" class="col-lg-12" style="margin-top:100px">
+			<img src="img/load.gif"></img>
+		</div>
 		
 		<!-- Fixed navbar -->
 		<nav id="footer" class="navbar navbar-default navbar-fixed-bottom">	
